correccion error imagen

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1><ins><strong>Arma tu viaje ideal</strong></ins></h1>
     <br>
-    <img src="./viaje.jpg">
+    <img src="/imagenes/planear viaje.jpg">
     <br>
     <p1>En este sitio web encontraras algunos consejos que te ayudaran a armar tu viaje ideal. Los mismos fueron brindados tanto por especialistas como por viajeros que, al igual que vos, aman recorrer el mundo. Esperamos que te sirvan!
     </p1>
